# OpenIncident

./: .dockerignore  .env.backend.example  .gitignore  Blog.MD  Dockerfile  Dockerfile.app  README.md  README_HACKATHON_FINAL.md  VIDEO_SCRIPT_FINAL.md  auth_owner_smoke.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  rl_training.py
artifacts/: rl_test_cases_65.json
colab/: OPENINCIDENT_X_COLAB.md  OpenIncidentX_HF_TRL_Minimal.ipynb  OpenIncidentX_Hackathon_Demo.ipynb  run_openincident_hackathon.py  run_openincident_hf_trl_minimal.py
docs/: AGENT_SYSTEM_OVERVIEW.md  AGENT_TRAINING_ROADMAP.md  DEPLOY_PUBLIC.md  FINAL_ARCHITECTURE.md  HACKATHON_BLOG_OUTLINE.md  HACKATHON_BLUEPRINT.md  HACKATHON_DEMO_SCRIPT.md  HACKATHON_FINAL_WIN_PACK.md  HACKATHON_ONE_DAY_PLAN.md  HACKATHON_RESULTS.md  HACKATHON_SUBMISSION_CHECKLIST.md  HACKATHON_SUBMISSION_FINAL.md  HOW_TO_TEST_OPENINCIDENT_X.md  HUGGINGFACE_COLAB_PLAN.md  JUDGE_RL_AND_DATASET_SHOW.md  OpenIncidentX_Hackathon_Final_Presentation.pptx  REALWORLD_DATA_INGESTION.md  RUN_COMMANDS.md  V2_EXECUTION_AND_BACKUP_PLAN.md
frontend/: index.html  package-lock.json  package.json
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
hf_space/: README.md  app.py  requirements.txt
scripts/: compare_rl_runs.py  configure_splunk_connector.py  judge_rl_packet.py  realtime_ingest_bridge.py
server/: Dockerfile  __init__.py  __main__.py  agent_training.py  app.py  browser_checks.py  config.py  environment.py  executor_runner.py  github_repo.py  log_engine.py  session_store.py  state_backend.py  (+3 more)
(+45 files in other folders)
