[project]
name = "production-incident-debugging-environment"
version = "1.0.0"
description = "OpenEnv-style production incident debugging environment for on-call agent evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "openai>=2.30.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "requests>=2.31.0",
  "uvicorn[standard]>=0.44.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
